--- a/src/components/imageCropper/imageCropper.styles.scss
+++ b/src/components/imageCropper/imageCropper.styles.scss
@@ -11,6 +11,17 @@
 		.image-canvas {
 			width: 100%;
 			height: 100%;
+			cursor: move;
+		}
+	}
+
+	.slider-container {
+		display: flex;
+		flex-direction: row;
+		height: 45px;
+		mat-slider {
+			width: 100%;
+			height: 100%;
 		}
 	}
 	
