--- a/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.scss
+++ b/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.scss
@@ -6,10 +6,10 @@
 	.options-container {
 		flex-grow: 1;
 
-		// .mat-option {
-		// 	height: 48px;
-		// 	line-height: 48px;
-		// 	width: 100%;
-		// }
+		.mat-option {
+			height: 48px;
+			line-height: 48px;
+			width: 100%;
+		}
 	}
 }
