--- a/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.css
+++ b/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.css
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   height: 100%; }
-  [mat-dialog-content] .options-container {
+  [mat-dialog-content] .options-outer-container {
     flex-grow: 1; }
-    [mat-dialog-content] .options-container .mat-option {
-      height: 48px;
-      line-height: 48px;
-      width: 100%; }
+    [mat-dialog-content] .options-outer-container .options-inner-container {
+      display: flex;
+      flex-direction: column-reverse;
+      width: 100%;
+      height: 100%; }
+      [mat-dialog-content] .options-outer-container .options-inner-container .mat-option {
+        height: 48px;
+        line-height: 48px;
+        width: 100%; }
