--- a/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.scss
+++ b/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.scss
@@ -3,13 +3,20 @@
 	flex-direction: column;
 	height: 100%;
 
-	.options-container {
+	.options-outer-container {
 		flex-grow: 1;
 
-		.mat-option {
-			height: 48px;
-			line-height: 48px;
+		.options-inner-container {
+			display: flex;
+			flex-direction: column-reverse;
 			width: 100%;
+			height: 100%;
+
+			.mat-option {
+				height: 48px;
+				line-height: 48px;
+				width: 100%;
+			}
 		}
 	}
 }
