--- a/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.css
+++ b/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.css
@@ -6,7 +6,7 @@
     flex-grow: 1; }
     [mat-dialog-content] .options-outer-container .options-inner-container {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
       width: 100%;
       height: 100%; }
       [mat-dialog-content] .options-outer-container .options-inner-container .mat-option {
