--- a/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.scss
+++ b/src/inputs/autocomplete/components/mobileModal/mobileModal.styles.scss
@@ -8,7 +8,7 @@
 
 		.options-inner-container {
 			display: flex;
-			flex-direction: column-reverse;
+			flex-direction: column;
 			width: 100%;
 			height: 100%;
 
