--- a/src/inputs/select/select.template.pug
+++ b/src/inputs/select/select.template.pug
@@ -6,6 +6,7 @@ mat-form-field.rui-input-container(
 	mat-label(*ngIf='fieldData.label') {{ fieldData.label }}
 	mat-select(
 		#inputElement,
+		[disabled]='fieldData.readOnly',
 		[formControl]='fieldData.inputFormControl',
 		[placeholder]='fieldData.placeholder'
 	) 
