--- a/src/inputs/input/input.template.pug
+++ b/src/inputs/input/input.template.pug
@@ -9,7 +9,9 @@ mat-form-field.rui-input-container(
 		matInput,
 		[formControl]='fieldData.inputFormControl',
 		[max]='fieldData.max',
+		[maxlength]='fieldData.maxLength',
 		[min]='fieldData.min',
+		[minlength]='fieldData.minLength',
 		[placeholder]='fieldData.placeholder',
 		[readonly]='fieldData.readOnly',
 		[type]='fieldData.type'
